# ChromaSchemes

./: README.md  pyproject.toml
.github/: copilot-instructions.md
config/: CHROMASCHEMES_CONFIG.json  CHROMASCHEMES_CONFIG.json.bak
config/CHROMASCHEMES.d/: README.md
src/Chromaschemes/: __init__.py  config.py
src/Chromaschemes/generators/: __init__.py  orbit.py
tests/: test_chromaschemes_config.py  test_chromaschemes_orbit.py  test_chromaschemes_registry_integration.py
