[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Chromaschemes"
version = "0.3.9"
description = "Geometric colour-scheme engine for Chromaspace"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["tUilKit"]

[tool.setuptools.packages.find]
where = ["src"]




